src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>API_Address_City__c</fullName>
        <label>API Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Address_Country__c</fullName>
        <label>API Address Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Address_PostalCode__c</fullName>
        <label>API Address PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Address_State__c</fullName>
        <label>API Address State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Address_Street_Line_1__c</fullName>
        <label>API Address Street Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Address_Street_Line_2__c</fullName>
        <label>API Address Street Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Address_Type__c</fullName>
        <label>API Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gift</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>API_Batch_ID__c</fullName>
        <label>API Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>API Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_Never_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>API Never Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_Phone__c</fullName>
        <label>API Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>API_Reference_ID__c</fullName>
        <label>API Reference ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StayClassy_ID__c</fullName>
        <label>StayClassy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field directly populated by trigger reflecting thids account is active.</description>
        <inlineHelpText>Is this Contact active?</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Age_Range__c</fullName>
        <description>Contact age range calculated by formula field and Age field.</description>
        <formula>IF(ISBLANK(rC_Bios__Age__c) || rC_Bios__Age__c&lt;=0, &apos;Unknown&apos;,
IF(rC_Bios__Age__c &gt;= 65, &quot;65+&quot;,
IF(rC_Bios__Age__c &gt;= 60, &quot;60-65&quot;,
IF(rC_Bios__Age__c &gt;= 55, &quot;55-60&quot;,
IF(rC_Bios__Age__c &gt;= 50, &quot;50-55&quot;,
IF(rC_Bios__Age__c &gt;= 45, &quot;45-50&quot;,
IF(rC_Bios__Age__c &gt;= 40, &quot;40-45&quot;,
IF(rC_Bios__Age__c &gt;= 35, &quot;35-40&quot;,
IF(rC_Bios__Age__c &gt;= 30, &quot;30-35&quot;,
IF(rC_Bios__Age__c &gt;= 25, &quot;25-30&quot;,
IF(rC_Bios__Age__c &gt;= 20, &quot;20-25&quot;,
IF(rC_Bios__Age__c &gt;= 16, &quot;16-20&quot;, &quot;&lt;16&quot;))))))))))))</formula>
        <inlineHelpText>Displays age range Contact  falls within.</inlineHelpText>
        <label>Age Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Age__c</fullName>
        <description>Age auto calculated via formula using Birthdate.</description>
        <formula>IF(ISBLANK(Birthdate), NULL, FLOOR((Today() - Birthdate) / 365.25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays Contact age.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Assistant_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field Indicating the Assistant phone should not be called.</description>
        <inlineHelpText>Indicates the Assistant phone should not be called.</inlineHelpText>
        <label>Assistant Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Assistant_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field, check to opt out of email communication to Assistant.</description>
        <inlineHelpText>Check to opt out of email communication to Assistant.</inlineHelpText>
        <label>Assistant Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Assistant_Email__c</fullName>
        <description>Assistant&apos;s Email Address.</description>
        <inlineHelpText>Assistant&apos;s Email Address.</inlineHelpText>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Birth_Day__c</fullName>
        <description>Manually populated contact birth day.</description>
        <inlineHelpText>Contact birth day.</inlineHelpText>
        <label>Birth Day</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Birth_Month__c</fullName>
        <description>Manually populated Contact birth month.</description>
        <inlineHelpText>Contact birth month.</inlineHelpText>
        <label>Birth Month</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Birth_Year__c</fullName>
        <description>Manually populated Contact birth year.</description>
        <inlineHelpText>Contact birth year.</inlineHelpText>
        <label>Birth Year</label>
        <picklist>
            <picklistValues>
                <fullName>1900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1901</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1902</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1903</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1904</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1905</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1906</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1907</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1908</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1909</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1910</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1911</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1912</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1913</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1914</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1915</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1916</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1917</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1918</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1919</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1920</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1921</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1922</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1923</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1924</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1925</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1926</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1927</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1928</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1929</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Deceased_Date__c</fullName>
        <description>Date Contact is deceased populated by trigger.</description>
        <inlineHelpText>Date Contact is deceased.</inlineHelpText>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Deceased_Day__c</fullName>
        <description>Day Contact is Deceased.</description>
        <inlineHelpText>Day Contact is Deceased.</inlineHelpText>
        <label>Deceased Day</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Deceased_Month__c</fullName>
        <description>Month Contact is deceased.</description>
        <inlineHelpText>Month Contact is deceased.</inlineHelpText>
        <label>Deceased Month</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Deceased_Year__c</fullName>
        <description>Year Contact is deceased.</description>
        <inlineHelpText>Year Contact is deceased.</inlineHelpText>
        <label>Deceased Year</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field indicating Contact is deceased.</description>
        <inlineHelpText>Indicates Contact is deceased.</inlineHelpText>
        <label>Deceased?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Demographic_Profile__c</fullName>
        <description>Formula Field providing gender, age range and ethnicity of Contact.</description>
        <formula>TEXT(rC_Bios__Gender__c) &amp;&quot; | &quot;&amp; rC_Bios__Age_Range__c &amp; &quot; | &quot;&amp;TEXT(rC_Bios__Ethnicity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gender, age range and ethnicity of Contact.</inlineHelpText>
        <label>Demographic Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Ethnicity__c</fullName>
        <description>Manually populated field indicating Ethnicity of a Contact.</description>
        <inlineHelpText>Indicates Ethnicity of a Contact.</inlineHelpText>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>American Indian / Native Alaskan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black / African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian / Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two or more race</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__External_Contact_Number__c</fullName>
        <description>Identification number of Contact for external system.</description>
        <inlineHelpText>Identification number of Contact for external system.</inlineHelpText>
        <label>External Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Facebook_Url__c</fullName>
        <description>Url to Contact&apos;s Facebook page.</description>
        <inlineHelpText>Url to Contact&apos;s Facebook page.</inlineHelpText>
        <label>Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Gender__c</fullName>
        <description>Url to Contact&apos;s Google + page.</description>
        <inlineHelpText>Url to Contact&apos;s Google + page.</inlineHelpText>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Google_Plus_Url__c</fullName>
        <description>Url to Contact&apos;s Google + page.</description>
        <inlineHelpText>Url to Contact&apos;s Google + page.</inlineHelpText>
        <label>Google+ URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Home_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field Indicating the Home phone should not be called.</description>
        <inlineHelpText>Indicates the Home phone should not be called.</inlineHelpText>
        <label>Home Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Home_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field, check to opt out of email communication to Home.</description>
        <inlineHelpText>Check to opt out of email communication to Home.</inlineHelpText>
        <label>Home Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Home_Email__c</fullName>
        <description>Manually populated field indicating Contact&apos;s home email.</description>
        <inlineHelpText>Contact&apos;s home email address.</inlineHelpText>
        <label>Home Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rC_Bios__LinkedIn_Url__c</fullName>
        <description>Url to Contact&apos;s LinkedIn page.</description>
        <inlineHelpText>Url to Contact&apos;s LinkedIn page.</inlineHelpText>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Maiden_Name__c</fullName>
        <description>Manually populated field indicating Contact&apos;s Maiden name.</description>
        <inlineHelpText>Indicates Contact&apos;s Maiden name.</inlineHelpText>
        <label>Maiden Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Marital_Status__c</fullName>
        <description>Manually populated field indicating Contact&apos;s marital status.</description>
        <inlineHelpText>Indicates Contact&apos;s marital status.</inlineHelpText>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohabitating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Partnership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Middle_Name__c</fullName>
        <description>Manually populated field indicating Contact&apos;s middle name.</description>
        <inlineHelpText>Contact&apos;s middle name.</inlineHelpText>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Minor_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually checked or automatically checked via trigger if Contact is younger than 18 years old.</description>
        <inlineHelpText>Manually checked or automatically checked if Contact is younger than 18 years old.</inlineHelpText>
        <label>Minor Child?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Mobile_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field Indicating the Mobile phone should not be called.</description>
        <inlineHelpText>Indicates the Mobile phone should not be called.</inlineHelpText>
        <label>Mobile Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Other_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field Indicating the Other phone should not be called.</description>
        <inlineHelpText>Indicates the Other phone should not be called.</inlineHelpText>
        <label>Other Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Other_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field, check to opt out of email communication to Other.</description>
        <inlineHelpText>Check to opt out of email communication to Other.</inlineHelpText>
        <label>Other Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Other_Email__c</fullName>
        <description>Manually populated field indicating Contact&apos;s other email. address.</description>
        <inlineHelpText>Contact&apos;s other email address.</inlineHelpText>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Contact as Preferred for the Account. Contact data is automatically rolled up to Account as a result.</description>
        <inlineHelpText>Designates Contact as Preferred for the Account.</inlineHelpText>
        <label>Preferred Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Email__c</fullName>
        <description>Manualy populated field indicating a Contact&apos;s preferred email address type.</description>
        <inlineHelpText>Indicates a Contact&apos;s preferred email address type.</inlineHelpText>
        <label>Preferred Email</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Mailing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated field via trigger  when Preferred Billing Address checkbox is selected on the Manage Addresses page.</description>
        <inlineHelpText>Indicates the Preferred Billing/Mailing  Address.</inlineHelpText>
        <label>Preferred Mailing Address</label>
        <referenceTo>rC_Bios__Address__c</referenceTo>
        <relationshipLabel>Contacts (Preferred Mailing Address)</relationshipLabel>
        <relationshipName>Contact_Preferred_Mailing_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Other_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated field via trigger when Preferred Other Address checkbox is selected on the Manage Addresses page.</description>
        <inlineHelpText>Indicates the Preferred Other Address.</inlineHelpText>
        <label>Preferred Other Address</label>
        <referenceTo>rC_Bios__Address__c</referenceTo>
        <relationshipLabel>Contacts (Preferred Other Address)</relationshipLabel>
        <relationshipName>Contacts_Preferred_Other_Address</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>